--- a/css/ttt.css
+++ b/css/ttt.css
@@ -11,9 +11,17 @@ ul {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'VT323';
   text-align: center;
   font-weight: bold;
+  background: url('../lib/ttt-game/background.jpg') no-repeat center;
+}
+
+.player-won {
+  color: lightgreen;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 50px;
 }
 
 h1 {
@@ -35,6 +43,7 @@ li {
   border: 5px solid black;
   background: gray;
   cursor: pointer;
+  font-size: 80px;
 }
 
 li:hover {
@@ -83,4 +92,3 @@ li:hover {
 figcaption {
   font-size: 30px;
 }
- 
