--- a/css/ttt.css
+++ b/css/ttt.css
@@ -14,7 +14,7 @@ body {
   font-family: 'VT323';
   text-align: center;
   font-weight: bold;
-  background: url('../lib/ttt-game/background.png') no-repeat center;
+  background: url('../assets/img/background.png') no-repeat center;
 }
 
 .player-won {
